# esp32_ir_remote

./: .gitignore  CMakeLists.txt  README.md
components/disp7seg/: CMakeLists.txt  disp7seg.c  disp7seg.h
components/ir_nec_encoder/: CMakeLists.txt  ir_nec_encoder.c  ir_nec_encoder.h
components/rmt_nec_init/: CMakeLists.txt  rmt_nec_init.c  rmt_nec_init.h
include/disp7seg/: disp7seg.h
main/: main.c  main.h
